--- a/loan.ipynb
+++ b/loan.ipynb
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "#read the training  testing data\n",
+    "#read the training and testing data\n",
     "train=pd.read_csv('train.csv')\n",
     "test=pd.read_csv('test.csv')\n",
     "train.head()"
